# alphadev

./: .gitignore  CMakeLists.txt  README.md  __init__.py  config.py  main.cpp  main.py  pyproject.toml  requirements.txt
alphadev_environment/: __init__.py  cpu_state.py  instructions.py  program.py
mcts/: __init__.py  node.py  search.py
src/: agent.py  assembly_env.cpp  assembly_env.hpp  bindings.cpp  mcts.py  network.py  train.py
src/assembly_env/: assembly_env.cpp  bindings.cpp
src/env/: assembly_env.hpp
tests/: test_agent.py  test_env.py  test_instructions.py  test_mcts.py
