[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alphadev"
version = "0.1.0"
description = "AlphaDev - Discovering faster algorithms"
readme = "README.md"

requires-python = ">=3.13"

dependencies = [
    "jax[cuda12]>=0.9.1",
    "flax>=0.12.5",
    "optax>=0.2.6",
    "numpy>=2.0.0",
    "pytest>=9.0.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
